--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 vgg_spill_detect_model.keras filter=lfs diff=lfs merge=lfs -text
+*.keras filter=lfs diff=lfs merge=lfs -text
+*.h5 filter=lfs diff=lfs merge=lfs -text
